--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
+    "moment": "^2.29.4",
     "vue": "^2.6.11",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.6.5",
     "vuelidate": "^0.7.7"
   },
